--- a/Okada_Voice_Changer_Colab_Unofficial.ipynb
+++ b/Okada_Voice_Changer_Colab_Unofficial.ipynb
@@ -63,7 +63,9 @@
             "GPU is available\n",
             "GPU Name: Tesla T4\n",
             "\u001b[36m\u001b[1m\u001b[3mDownloading prebuilt executable...\u001b[0m\n",
-            "-changer-linux-amd6  18%[==>                 ] 366.93M   112MB/s    eta 15s    "
+            "voice-changer-linux 100%[===================>]   1.95G   106MB/s    in 22s     \n",
+            "voice-changer-linux 100%[===================>]   1.11G   139MB/s    in 7.0s    \n",
+            "\u001b[32m\u001b[1m\u001b[3mUnpacking...\u001b[0m\n"
           ]
         }
       ],
